.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectError_returnSignature.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectError_returnSignature.ts(21,3): error TS377003: Missing errors ErrorA | ErrorB | ErrorC in the expected Effect type. effect(missingEffectError)
/.src/missingEffectError_returnSignature.ts(25,63): error TS377003: Missing errors ErrorA | ErrorB | ErrorC in the expected Effect type. effect(missingEffectError)
/.src/missingEffectError_returnSignature.ts(28,95): error TS377003: Missing errors ErrorC in the expected Effect type. effect(missingEffectError)
/.src/missingEffectError_returnSignature.ts(28,95): error TS377003: Missing errors YieldableError & Readonly<{ a: 3; }> in the expected Effect type. effect(missingEffectError)


==== /.src/missingEffectError_returnSignature.ts (4 errors) ====
    // @effect-v3
    import * as Data from "effect/Data"
    import type * as Effect from "effect/Effect"
    
    class ErrorA extends Data.Error<{
      a: 1
    }> {}
    
    class ErrorB extends Data.Error<{
      a: 2
    }> {}
    
    class ErrorC extends Data.Error<{
      a: 3
    }> {}
    
    declare const effectWithErrors: Effect.Effect<number, ErrorA | ErrorB | ErrorC>
    
    export function testFn(): Effect.Effect<number> {
      // @ts-expect-error
      return effectWithErrors
      ~~~~~~
!!! error TS377003: Missing errors ErrorA | ErrorB | ErrorC in the expected Effect type. effect(missingEffectError)
    }
    
    // @ts-expect-error
    export const conciseBody: () => Effect.Effect<number> = () => effectWithErrors
                                                                  ~~~~~~~~~~~~~~~~
!!! error TS377003: Missing errors ErrorA | ErrorB | ErrorC in the expected Effect type. effect(missingEffectError)
    
    // @ts-expect-error
    export const conciseBodyMissingServiceC: () => Effect.Effect<number, ErrorA | ErrorB> = () => effectWithErrors
                                                                                                  ~~~~~~~~~~~~~~~~
!!! error TS377003: Missing errors ErrorC in the expected Effect type. effect(missingEffectError)
                                                                                                  ~~~~~~~~~~~~~~~~
!!! error TS377003: Missing errors YieldableError & Readonly<{ a: 3; }> in the expected Effect type. effect(missingEffectError)
    
